SCR #533262 - fix: update promocode btn visibility logic

--- a/src/modules/core/components/promocode-link/styles/themes/_default.scss
+++ b/src/modules/core/components/promocode-link/styles/themes/_default.scss
@@ -35,7 +35,7 @@
 
 ::ng-deep {
 
-    .wlc-steps__main {
+    .wlc-steps__main[class] {
 
         .wlc-sign-up-form {
 
